# data-engineering-course

./: .gitignore
02-python/: .gitignore  README.md  mise.toml  pyproject.toml
02-python/customs_data/: core.py
02-python/examples/: run.py
03-hadoop/: README.md  env.sh
03-hadoop/stage1/: combiner.py  mapper.py  reducer.py
03-hadoop/stage2/: reducer.py
04-spark/: README.md  job.py
